# departures-backend

./: .gitignore  README.md  all_stops.pkl  app.py  function_app.py  helpers.py  nearest.py  pyproject.toml  requirements.txt
data/: all_stops.pkl  metro_rail_stops.pkl
